--- a/style.css
+++ b/style.css
@@ -1,86 +1,90 @@
 /* Reset */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: sans-serif;
 }
 
 /* Main tags */
 
 body {
-    background: #f3f3f3;
+   background: #f3f3f3;
 }
 
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-    background-color: #EEE;
-    box-shadow: 0px 0px 10px rgb(0,0,0,0.2);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 60px;
+   background-color: #EEE;
+   box-shadow: 0px 0px 10px rgb(0,0,0,0.2);
 }
 
+/* List */
+
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 main .list {
-    width:100%;
-    max-width: 768px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    margin-top: 25px;
+   width:100%;
+   max-width: 768px;
+   background-color: #fff;
+   border: 1px solid #ccc;
+   margin-top: 25px;
 }
 
 main .list .item {
-    padding: 15px;
-    border-bottom: 1px solid #ccc;
+   padding: 15px;
+   border-bottom: 1px solid #ccc;
 }
 
-main .list .item:first-of-type {
-     border-bottom: none; 
+main .list .item:last-of-type {
+    border-bottom: none; 
 }
 
 main .list .item:hover {
-    background: rgba(0, 0, 0, 0.05);
+   background: rgba(0, 0, 0, 0.05);
 }
 
+/* Pagenumbers */
+
 .pagenumbers {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
 }
 
 .pagenumbers button {
-    width: 50px;
-    height: 50px;
+   width: 50px;
+   height: 50px;
 
-    appearance: none;
-    border: none;
-    outline: none;
-    cursor: pointer;
+   appearance: none;
+   border: none;
+   outline: none;
+   cursor: pointer;
 
-    background-color: #44AAEE;
+   background-color: #44AAEE;
 
-    margin: 5px;
-    transition: 0.4s;
+   margin: 5px;
+   transition: 0.6s;
 
-    color: #fff;
-    font-size: 18px;
-    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+   color: #fff;
+   font-size: 18px;
+   text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 .pagenumbers button:hover {
-    background-color: #44EEAA;
+   background-color: #3381b4;
 }
 
 .pagenumbers button.active {
-    background-color: #44EEAA;
-    box-shadow: inset 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
+   background-color: #3381b4;
+   box-shadow: inset 0px 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
